--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,7 +7,7 @@
   "sign_in":"Sign In",
   "Register_now": "Register Now",
   "Register": "Register",
-  "Dont_have_an_account": "Don'''t have an account ?",
+  "Dont_have_an_account": "Don't have an account ?",
   "please_register_to_login": "Please register to login",
   "full_name": "Full name",
   "Register_Email":"Email address",
