--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -11,8 +11,8 @@
   "pharmacy_name_validate":"اسم الصيدلية يجب الا يكون فارغ",
   "city_validate":"المدينة يجب الا تكون فارغة",
   "pharmacy_address_validate":"عنوان الصيدلية يجب الا يكون فارغ",
-  "Password_validate1": "كلمة السر يجب الا تكون فارغة",
-  "Password_validate2": "كلمة قصيرة جدا",
+  "password_validate1": "كلمة السر يجب الا تكون فارغة",
+  "password_validate2": "كلمة قصيرة جدا",
   "sign_in": "تسجيل الدخول",
   "Register":"سجل الان",
   "Dont_have_an_account": "لا تمتلك حساب ؟",
@@ -29,6 +29,32 @@
   "favorite":"المفضلة",
   "orders": "الطلبات",
   "profile":"الحساب",
-  "search_med": "ابحث عن دواء"
+  "search_med": "ابحث عن دواء",
+  "login_error" : " لايمكن ايجاد الحساب",
+  "Account_Information": " معلومات الحساب ",
+  "Commercial_name":"الاسم التجاري",
+  "Scientific_name": "الاسم العلمي",
+  "Category": "الصنف",
+  "Company":"الشركة المصنعة",
+  "Available_quantity": "الكمية المتاحة ",
+  "Expiration_date": "تاريخ الانتهاء",
+  "Price":"السعر",
+  "SP": "ل.س",
+  "change_password": "تغيير كلمة المرور",
+  "confirm_password": "تأكيد كلمة المرور",
+  "save":"حفظ",
+  "Amount":"الكمية",
+  "name": "الاسم",
+  "orderStatus": "{howMany, plural, one{تم الٳرسال} two{قيد التحضير} other{مستلمة}}",
+  "orderPaymentStatus" : "{howMany, plural, one{غير مدفوع} other{مدفوع}}",
+  "Profile_Details": "تفاصيل الحساب",
+  "My_Cart":"سلَتي",
+  "Search": "البحث",
+  "change_password_validate": "كلمة المرور الجديدة غير متطابقة. ادخل كلمة المرور الجديدة مرة أخرى هنا",
+  "password_changed": "تم تغيير كلمة المرور بنجاح",
+  "Logout": "تسجيل الخروج",
+  "Total":  "الاجمالي",
+  "onboarding": "اكتشف عالم جديد للصيدليات",
+  "createAccount": "انشاء حساب"
 
 }
